[project]
name = "soda-nginx"
version = "2025.5.13.0"
description = "dev nginx server via pip (Windows only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["sodatools>=2025.2.16.0"]

[project.urls]
Repository = "https://github.com/soda92/soda-nginx"

[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["soda_nginx", "soda_nginx_bin"]
# include = ["*.sqlite3"]
exclude = ["__pycache__", "*.pyc", "logs", "temp"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["soda_nginx", "soda_nginx_bin"]
# exclude is not needed because wheel is build from sdist in uv

[tool.hatch.build.hooks.custom]

[project.scripts]
nginx = "soda_nginx.main:main"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = ["hatchling>=1.27.0"]
